--- a/index.html
+++ b/index.html
@@ -8,26 +8,27 @@
 </head>
 <body>
 <div class="container">
-    <h1>Лучшие пластиковые окна Кривого Рога</h1>
+    <h1>Современные входные двери - Кривой Рог</h1>
 
-   <p>Пластиковые окна — это современное и практичное решение для жилых домов и офисов в Кривом Роге. Они обеспечивают отличную теплоизоляцию, защищают от шума и создают комфортные условия для проживания. Одним из важнейших преимуществ этих окон является их долговечность и простота в уходе. В сравнении с традиционными деревянными окнами, окна ПВХ не требуют частого ремонта или покраски. <a href="https://vikont.dp.ua/calc">https://vikont.dp.ua/calc</a> можно через удобный калькулятор расчёта стоимости на сайте "Виконт".</p>
+    <p>Современные входные двери — это не просто защита вашего дома, но и важный элемент его внешнего вида. В Кривом Роге доступен широкий выбор входных дверей, которые соответствуют высоким стандартам безопасности и эстетики. Благодаря использованию новейших технологий, такие двери обладают превосходными теплоизоляционными и звукоизоляционными характеристиками, а также долговечностью. Входные двери играют ключевую роль в обеспечении безопасности вашего дома, одновременно подчёркивая его стиль и индивидуальность. Они могут быть изготовлены на заказ, чтобы идеально соответствовать вашим требованиям по дизайну и функциональности.</p>
 
+    <p>При выборе входных дверей важно обратить внимание на такие факторы, как материал, уровень безопасности, теплоизоляция и эстетика. Современные двери должны не только защищать дом, но и быть эстетичным дополнением общего архитектурного облика здания. Для того чтобы <a href="https://vikont.dp.ua/category/vhodnye-dveri">https://vikont.dp.ua/category/vhodnye-dveri</a> заказать современные входные двери, необходимо ознакомиться с вариантами, доступными на рынке, и выбрать оптимальное решение, которое будет соответствовать вашим потребностям.</p>
 
-    <h2>Преимущества пластиковых окон</h2>
+    <h2>Преимущества современных входных дверей</h2>
 
-    <p>Пластиковые окна имеют множество преимуществ, которые делают их популярным выбором среди домовладельцев и владельцев коммерческой недвижимости. Рассмотрим основные причины, почему стоит выбрать пластиковые окна:</p>
+    <p>Современные входные двери обладают множеством преимуществ, которые делают их популярным выбором среди домовладельцев и застройщиков:</p>
 
     <ul>
-        <li><strong>Теплоизоляция:</strong> Одним из главных преимуществ пластиковых окон является их способность эффективно сохранять тепло в помещении. Они препятствуют утечке тепла через окна, что позволяет значительно снизить затраты на отопление в зимний период.</li>
-        <li><strong>Звукоизоляция:</strong> Современные пластиковые окна оснащены многокамерными профилями и специальными стеклопакетами, которые помогают снизить уровень шума с улицы. Это особенно актуально для домов, расположенных вблизи оживлённых дорог или промышленных зон.</li>
-        <li><strong>Устойчивость к погодным условиям:</strong> ПВХ-окна не подвержены воздействию влаги, ультрафиолетовых лучей и перепадов температур. Они не требуют регулярного ухода, как деревянные окна, и могут служить десятилетиями без потери своих свойств.</li>
-        <li><strong>Долговечность:</strong> Благодаря прочным материалам, окна ПВХ сохраняют свою форму и функциональность долгие годы. Они устойчивы к воздействию химических веществ, что делает их идеальным выбором для регионов с агрессивной средой.</li>
-        <li><strong>Эстетика:</strong> Пластиковые окна доступны в широком ассортименте дизайнов и цветов. Это позволяет подобрать окна, которые идеально впишутся в архитектуру здания, будь то классический стиль или современный минимализм.</li>
+        <li><strong>Высокий уровень безопасности:</strong> Входные двери оснащены современными замками и системой защиты от взломов, что гарантирует надёжную защиту вашего дома.</li>
+        <li><strong>Теплоизоляция:</strong> Использование многослойных конструкций и утеплителей обеспечивает эффективное сохранение тепла в доме, что особенно важно в холодные зимние месяцы.</li>
+        <li><strong>Звукоизоляция:</strong> Современные двери эффективно снижают уровень шума, что особенно полезно для домов, расположенных вблизи оживлённых дорог или в шумных районах.</li>
+        <li><strong>Прочность и долговечность:</strong> Входные двери, изготовленные из высококачественных материалов, устойчивы к износу и воздействию неблагоприятных погодных условий.</li>
+        <li><strong>Широкий выбор дизайнов:</strong> Современные входные двери можно подобрать в любом стиле — от классики до минимализма, с использованием стеклянных вставок, металлических элементов и декоративных фурнитур.</li>
     </ul>
 
-    <h2>Сравнение материалов окон</h2>
+    <h2>Материалы для входных дверей</h2>
 
-    <p>При выборе окон важно учитывать, из какого материала они изготовлены. Это напрямую влияет на их характеристики, долговечность и стоимость. Ниже приведена таблица сравнения популярных материалов для окон:</p>
+    <p>Современные входные двери изготавливаются из различных материалов, каждый из которых имеет свои особенности и преимущества. Ниже представлены наиболее популярные материалы для производства входных дверей:</p>
 
     <table>
         <thead>
@@ -39,67 +40,69 @@
         </thead>
         <tbody>
             <tr>
-                <td>ПВХ (поливинилхлорид)</td>
-                <td>Отличная тепло- и звукоизоляция, устойчивость к погодным условиям, долговечность, низкая стоимость</td>
-                <td>Меньше вариантов внешней отделки по сравнению с деревянными окнами</td>
-            </tr>
-            <tr>
-                <td>Дерево</td>
-                <td>Природная красота, экологичность, высокая теплоизоляция</td>
-                <td>Требует регулярного ухода, может деформироваться под воздействием влаги</td>
+                <td>Сталь</td>
+                <td>Высокая прочность, устойчивость к взломам, долговечность</td>
+                <td>Большой вес, необходимость дополнительной теплоизоляции</td>
             </tr>
             <tr>
                 <td>Алюминий</td>
-                <td>Прочность, лёгкость, возможность изготовления больших оконных конструкций</td>
-                <td>Низкая теплоизоляция без дополнительных вставок, высокая стоимость</td>
+                <td>Легкость, устойчивость к коррозии, долговечность</td>
+                <td>Низкая теплоизоляция по сравнению с другими материалами</td>
             </tr>
             <tr>
-                <td>Металлопластик</td>
-                <td>Прочность, сочетание свойств металла и ПВХ, устойчивость к коррозии</td>
-                <td>Более высокая стоимость по сравнению с обычным ПВХ</td>
+                <td>Дерево</td>
+                <td>Эстетичный внешний вид, природная теплоизоляция, экологичность</td>
+                <td>Высокая стоимость, требует регулярного ухода</td>
+            </tr>
+            <tr>
+                <td>Композитные материалы</td>
+                <td>Легкость, прочность, устойчивость к внешним воздействиям</td>
+                <td>Более высокая стоимость по сравнению с металлическими дверями</td>
             </tr>
         </tbody>
     </table>
 
-    <h2>Почему важно правильно выбрать окна?</h2>
+    <h2>Как выбрать входные двери?</h2>
 
-    <p>Правильный выбор окон играет ключевую роль в создании комфортного микроклимата внутри помещения. Окна — это не только способ улучшить внешний вид здания, но и средство повышения энергоэффективности дома или офиса. Пластиковые окна, благодаря своим свойствам, помогают существенно сократить затраты на отопление в зимний период, а также снизить расходы на кондиционирование в летнее время.</p>
-
-    <p>Кроме того, правильно подобранные окна позволяют значительно снизить уровень шума, что особенно важно для жилых домов в городских условиях. Шум с улицы может негативно влиять на качество сна, а также на концентрацию и работоспособность в дневное время. Пластиковые окна с хорошими звукоизоляционными характеристиками способны создать более комфортные условия для жизни и работы.</p>
-
-    <h2>Как правильно ухаживать за пластиковыми окнами?</h2>
-
-    <p>Одним из преимуществ пластиковых окон является их простота в уходе. Чтобы окна сохраняли свои свойства долгие годы, достаточно следовать простым рекомендациям по уходу:</p>
+    <p>Выбор входной двери требует внимания к ряду ключевых аспектов, чтобы обеспечить надёжную защиту дома и поддерживать комфорт внутри:</p>
 
     <ul>
-        <li><strong>Чистка стёкол:</strong> Регулярно протирайте стёкла мягкими моющими средствами, чтобы удалить пыль и загрязнения. Не используйте абразивные материалы, чтобы избежать появления царапин.</li>
-        <li><strong>Уход за рамами:</strong> Рамы из ПВХ также нуждаются в чистке. Используйте мягкие ткани и средства, предназначенные для ПВХ, чтобы сохранить внешний вид рам.</li>
-        <li><strong>Проверка уплотнителей:</strong> Уплотнители на окнах играют важную роль в поддержании теплоизоляции и звукоизоляции. Периодически проверяйте их состояние и при необходимости заменяйте изношенные элементы.</li>
-        <li><strong>Смазывание механизмов:</strong> Для плавной работы механизмов открытия и закрытия окон рекомендуется регулярно смазывать петли и ручки специальными смазочными материалами.</li>
+        <li><strong>Уровень безопасности:</strong> В первую очередь, дверь должна быть надёжной и защищать дом от несанкционированного проникновения. Важно выбирать двери с качественными замками и антивандальными покрытиями.</li>
+        <li><strong>Тепло- и звукоизоляция:</strong> Хорошая дверь должна эффективно удерживать тепло и снижать уровень внешнего шума. Модели с утеплёнными вставками и герметичными уплотнителями — идеальный выбор для сохранения комфорта в доме.</li>
+        <li><strong>Дизайн:</strong> Дверь должна гармонировать с общим стилем здания. Вы можете выбрать двери с декоративными элементами, стеклянными вставками или строгий минималистичный дизайн.</li>
+        <li><strong>Материал:</strong> От выбора материала зависит прочность, долговечность и уровень теплоизоляции двери. Стальные двери — самый надёжный вариант, однако, если вам важен внешний вид, стоит рассмотреть деревянные или композитные модели.</li>
     </ul>
 
-    <h2>Типы пластиковых окон</h2>
+    <h2>Уход за входными дверями</h2>
 
-    <p>Существуют разные виды пластиковых окон, которые подойдут для различных типов зданий и помещений. Вот основные типы:</p>
+    <p>Для того чтобы двери прослужили долго и сохраняли свои свойства, за ними необходимо правильно ухаживать. Вот несколько рекомендаций по уходу за входными дверями:</p>
 
     <ul>
-        <li><strong>Однокамерные окна:</strong> Состоят из одного стеклопакета и отлично подходят для помещений, где нет необходимости в высокой теплоизоляции. Такие окна часто используются для балконов и дачных домов.</li>
-        <li><strong>Двухкамерные окна:</strong> Обладают более высокими тепло- и звукоизоляционными характеристиками. Идеально подходят для квартир и домов, расположенных в холодных регионах.</li>
-        <li><strong>Трёхкамерные окна:</strong> Максимальная теплоизоляция и звукоизоляция. Эти окна рекомендуются для использования в северных регионах или в зданиях, где требуется минимизация теплопотерь.</li>
+        <li><strong>Регулярная чистка:</strong> Очищайте двери от пыли и грязи с использованием мягкой ткани и специализированных средств для ухода за металлом или деревом.</li>
+        <li><strong>Смазывание замков и петель:</strong> Для плавной работы замков и петель необходимо периодически смазывать их, чтобы избежать заеданий и скрипов.</li>
+        <li><strong>Защита от влаги:</strong> Двери, выходящие на улицу, требуют дополнительной защиты от влаги. Для этого можно использовать водоотталкивающие средства и лакокрасочные покрытия.</li>
+        <li><strong>Проверка уплотнителей:</strong> Со временем уплотнители могут изнашиваться, что ухудшает теплоизоляцию двери. Их необходимо проверять и заменять по мере необходимости.</li>
     </ul>
 
-    <h2>Почему окна ПВХ — это выгодное вложение?</h2>
+    <h2>Разновидности современных входных дверей</h2>
 
-    <p>Многие владельцы недвижимости в Кривом Роге выбирают пластиковые окна по многим причинам. Помимо снижения затрат на отопление и улучшения звукоизоляции, такие окна обеспечивают долгосрочные преимущества. Вложения в качественные пластиковые окна окупаются за счёт сокращения эксплуатационных расходов и повышения комфорта проживания.</p>
+    <p>На рынке представлено множество различных типов входных дверей, каждая из которых имеет свои особенности. Рассмотрим основные виды современных входных дверей:</p>
 
-    <p>Кроме того, пластиковые окна повышают эстетическую привлекательность здания. Благодаря разнообразию дизайнов и цветовых решений, они легко вписываются в любую архитектурную концепцию, будь то современный дом или классическое здание.</p>
+    <ul>
+        <li><strong>Стальные двери:</strong> Это самый популярный и надёжный вариант для обеспечения безопасности дома. Такие двери часто устанавливаются в квартирах и частных домах, где важна защита от взломов.</li>
+        <li><strong>Деревянные двери:</strong> Это классический выбор для тех, кто ценит естественные материалы и эстетичный внешний вид. Такие двери обеспечивают хорошую теплоизоляцию, но требуют регулярного ухода.</li>
+        <li><strong>Композитные двери:</strong> Изготовленные из современных материалов, такие двери обладают высокой прочностью, лёгкостью и устойчивостью к внешним воздействиям.</li>
+        <li><strong>Двери с антивандальными покрытиями:</strong> Такие двери предназначены для мест с высокой проходимостью и риском повреждений. Они обладают усиленной конструкцией и специальным покрытием, защищающим от механических повреждений.</li>
+    </ul>
+
+    <h2>Эстетика и стиль современных входных дверей</h2>
+
+    <p>Современные входные двери — это не только элемент безопасности, но и важная часть дизайна вашего дома. Производители предлагают разнообразные решения: от классических деревянных моделей до ультрасовременных дверей с металлическими или стеклянными вставками. В зависимости от архитектурного стиля здания, можно выбрать дверь с декоративными элементами, коваными решётками, витражными стёклами или минималистичный вариант без лишних деталей. Таким образом, современные входные двери могут стать важным акцентом в оформлении фасада вашего дома.</p>
 
     <h2>Заключение</h2>
 
-    <p>Пластиковые окна — это инвестиция в комфорт и энергоэффективность вашего дома. Они долговечны, просты в уходе и обеспечивают высокую тепло- и звукоизоляцию. Независимо от того, выбираете ли вы окна для жилого дома или коммерческого объекта, пластиковые окна остаются одним из самых надёжных и практичных решений на рынке. Установка таких окон — это шаг к снижению затрат на отопление и улучшению условий проживания.</p>
-
+    <p>Современные входные двери — это сочетание стиля, безопасности и функциональности. Они обеспечивают защиту дома, сохраняют тепло и создают комфортную атмосферу. В Кривом Роге доступен широкий выбор современных дверей, которые можно заказать в соответствии с вашими индивидуальными требованиями. Независимо от того, выбираете ли вы двери для квартиры, частного дома или коммерческого здания, современные решения предложат вам сочетание качества, эстетики и надёжности, которые прослужат долгие годы.</p>
 </div>
-
 
 
 </body>
